Add user and issue filtering capabilities; enhance board and sprint management features